--- a/frontend/src/shared/ui/layouts/DashboardLayout/styles.scss
+++ b/frontend/src/shared/ui/layouts/DashboardLayout/styles.scss
@@ -9,7 +9,6 @@
     min-width: 0;
     overflow: auto;
     height: 100dvh;
-    background: #F8F8F6;
   }
 
   &__burger {
